neteja del notebook

--- a/crear_blueprint.ipynb
+++ b/crear_blueprint.ipynb
@@ -1,14 +1,6 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "21c75f80",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "id": "00cfd591",
    "metadata": {},
@@ -17,62 +9,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "b4e173db",
-   "metadata": {},
-   "source": [
-    "Per verificar que datasets.ods i el notebook estan a la llista"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "8cb13114",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Python executable: c:\\Users\\UX433\\miniconda3\\envs\\myenv\\python.exe\n",
-      "Directori de treball: c:\\Users\\UX433\\OneDrive\\Escritorio\\networkalignment\n",
-      "Llistat d'arxius a la carpeta:\n",
-      " - .git\n",
-      " - A2_blueprint.npy\n",
-      " - A_test_equiv.npy\n",
-      " - C-el_k4_Synthetic- No groups - Simoultenously.ipynb\n",
-      " - Hs_base0.npy\n",
-      " - Hs_base1.npy\n",
-      " - Hs_synthetic_paper.npy\n",
-      " - L_latent_from_pq.npy\n",
-      " - L_latent_repo_exact_errors.npy\n",
-      " - Matriz_epochs_A.pickle\n",
-      " - Syntetic_succesive_tot_0.pickle\n",
-      " - codienbrut.ipynb\n",
-      " - crear_blueprint.ipynb\n",
-      " - datasets.ods\n",
-      " - energies_base0.npy\n",
-      " - energies_base1.npy\n",
-      " - energy_pipeline_summary.npy\n",
-      " - environment.yml\n",
-      " - synthetic_paper.npy\n",
-      " - synthetic_paper_0.npy\n",
-      " - synthetic_repo_errors.npy\n"
-     ]
-    }
-   ],
-   "source": [
-    "import os, sys\n",
-    "print(\"Python executable:\", sys.executable)     # mostra el Python que corre (ha de ser el env activat)\n",
-    "print(\"Directori de treball:\", os.getcwd())    # carpeta del repo\n",
-    "print(\"Llistat d'arxius a la carpeta:\")\n",
-    "for f in sorted(os.listdir('.')):\n",
-    "    print(\" -\", f)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
    "id": "47175c83",
    "metadata": {},
    "outputs": [],
@@ -106,25 +44,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "2109afac",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Read: 0 size (227, 183)\n",
-      "Read: 1 size (227, 183)\n",
-      "Read: 2 size (227, 183)\n",
-      "Read: 3 size (227, 183)\n",
-      "Read: 4 size (227, 183)\n",
-      "Read: 5 size (227, 183)\n",
-      "Read: 6 size (227, 183)\n",
-      "Read: 7 size (227, 183)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "### Open the files\n",
     "fulls = 8\n",
@@ -135,7 +58,7 @@
     "for i in range(0,fulls): #recorro 0...7\n",
     "    d[\"group\" + str(i)] = pd.read_excel(\"datasets.ods\", sheet_name=D+str(i+1)) #el que al diccionari serà gorup 0, sera el meu Dataset1\n",
     "    # hem assignat al diccionari: d[\"group0\"] = <taula Dataset1> \n",
-    "    print('Read:',i, 'size', d[\"group\" + str(i)].shape) #volem imprimir el nre de files i columnes"
+    "    #print('Read:',i, 'size', d[\"group\" + str(i)].shape) #volem imprimir el nre de files i columnes"
    ]
   },
   {
@@ -156,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "9be74200",
    "metadata": {},
    "outputs": [],
@@ -204,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "6a76e455",
    "metadata": {},
    "outputs": [
@@ -280,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "7d1b9b12",
    "metadata": {},
    "outputs": [
@@ -323,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "0a5c5fcf",
    "metadata": {},
    "outputs": [
@@ -348,271 +271,6 @@
     "#guardem\n",
     "np.save(\"A2_blueprint.npy\", A2)\n",
     "print(\"Guardat com A2_blueprint\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "7463e263",
-   "metadata": {},
-   "source": [
-    "# Generar xarxes amb error"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "1b113626",
-   "metadata": {},
-   "source": [
-    "Dues maneres, fixar un nombre d'errors (com es fa al codi de la Teresa) o fer servir p i q (probabilitats de copiar malament un link/no-link). Farem totes dues"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "5cbbf724",
-   "metadata": {},
-   "source": [
-    "### ESBORRAR AIXÒ: Veure d'on sortien els errors q feia servir Teresa"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "89bab6f6",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "edges 2186 zeros 47990\n",
-      "q_equiv = 0.1495882891125343\n",
-      "p_equiv = 0.00681391956657637\n"
-     ]
-    }
-   ],
-   "source": [
-    "L = np.load(\"A2_blueprint.npy\")\n",
-    "Nx = L.shape[0]\n",
-    "edges = int(L.sum())\n",
-    "zeros = Nx*Nx - edges\n",
-    "e_error = 327\n",
-    "z_error = 327\n",
-    "q_equiv = e_error / edges\n",
-    "p_equiv = z_error / zeros\n",
-    "print(\"edges\", edges, \"zeros\", zeros)\n",
-    "print(\"q_equiv =\", q_equiv)\n",
-    "print(\"p_equiv =\", p_equiv)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "66f6c5b4",
-   "metadata": {},
-   "source": [
-    "Hem vist que p i q del repositori son practicament els mateixos del paper"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "d80ac67e",
-   "metadata": {},
-   "source": [
-    "### Càlcul de nombre d'errors equivalents per p i q"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "id": "4b7136c4",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Blueprint A2 carregat correctament.\n",
-      "Mida: (224, 224)\n",
-      "Nombre d'enllaços (1’s): 2186\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Carrega el blueprint A2 desat\n",
-    "L = np.load(\"A2_blueprint.npy\")\n",
-    "\n",
-    "Nx = L.shape[0]\n",
-    "\n",
-    "print(\"Blueprint A2 carregat correctament.\")\n",
-    "print(\"Mida:\", L.shape)\n",
-    "print(\"Nombre d'enllaços (1’s):\", int(L.sum()))\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "id": "304c50fc",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "327 335\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Errors deduits dels valors del paper\n",
-    "edges_A2 = L.sum()\n",
-    "zeros_A2 = Nx*Nx - edges_A2\n",
-    "\n",
-    "q_paper = 0.15\n",
-    "p_paper = 0.007\n",
-    "\n",
-    "errors_esborrar = int(q_paper * edges_A2)\n",
-    "errors_crear = int(p_paper * zeros_A2)\n",
-    "\n",
-    "print(errors_esborrar, errors_crear)\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "bcc99760",
-   "metadata": {},
-   "source": [
-    "No són exactament els mateixos, suposo que això es deu a què al repo es fan servir p i q que no quadren exactament amb els del paper. "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "9c889cf9",
-   "metadata": {},
-   "source": [
-    "(Esborrar això) ara faré el mateix però amb els p i q que he deduit del codi de la teresa, per veure si em surt el mateix nre, d'errors que ella ha fet servir (327,327) i comprovar validesa de l'anterior"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "id": "0f0ea094",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "327 327\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Errors deduits dels valors del paper\n",
-    "edges_A2 = L.sum()\n",
-    "zeros_A2 = Nx*Nx - edges_A2\n",
-    "\n",
-    "errors_esborrar_teresa = int(q_equiv * edges_A2)\n",
-    "errors_crear_teresa = int(p_equiv * zeros_A2)\n",
-    "\n",
-    "print(errors_esborrar_teresa, errors_crear_teresa)\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "3ee4fec7",
-   "metadata": {},
-   "source": [
-    "Sí, el nombre d'errors quadra"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "822fdf74",
-   "metadata": {},
-   "source": [
-    "# Generar xarxes amb nombre d'errors"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "eaf29cec",
-   "metadata": {},
-   "source": [
-    "Ara estem generant xarxes com es feia al repositori, amb el mateix nombre d'errors exacte"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "id": "0fddc963",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'# === Generar xarxes amb errors exactes (estil del repo) ===\\n\\nK = 2             # nombre de xarxes a generar\\ne_error = 327       # errors esborrant enllaços\\nz_error = 327       # errors creant enllaços\\n\\n# Carregar blueprint si cal\\nif \\'L\\' not in globals():\\n    print(\"No hi ha L a la memòria, carregant A2_blueprint.npy ...\")\\n    L = np.load(\"A2_blueprint.npy\")\\n\\nNx = L.shape[0]\\nprint(\"Blueprint A2 carregat: shape\", L.shape, \"edges:\", int(L.sum()))\\n\\n# Preparar output\\nA_repo = np.zeros((K, Nx, Nx), dtype=int)\\nrng = np.random.default_rng(42)  # llavor fixa\\n\\nedges_total = int(L.sum())\\nzeros_total = Nx * Nx - edges_total\\n\\nprint(\"Edges A2:\", edges_total, \"Zeros A2:\", zeros_total)\\n\\n# Comprovacions\\nif e_error > edges_total:\\n    raise ValueError(f\"e_error ({e_error}) > nombre d\\'enllaços ({edges_total})\")\\nif z_error > zeros_total:\\n    raise ValueError(f\"z_error ({z_error}) > nombre de zeros ({zeros_total})\")\\n\\nfor m in range(K):\\n    A = L.copy().astype(int)\\n    A_flat = A.reshape(Nx*Nx)\\n\\n    ones_idx = np.where(A_flat == 1)[0]\\n    zeros_idx = np.where(A_flat == 0)[0]\\n\\n    flip_ones = rng.choice(ones_idx, size=e_error, replace=False)\\n    flip_zeros = rng.choice(zeros_idx, size=z_error, replace=False)\\n\\n    A_flat[flip_ones] = 0\\n    A_flat[flip_zeros] = 1\\n\\n    A = A_flat.reshape(Nx, Nx)\\n    A_repo[m] = A\\n\\n    errors_removed = edges_total - np.sum((A == 1) & (L == 1))\\n    errors_added = np.sum((A == 1) & (L == 0))\\n\\n    print(f\"Xarxa {m}: Edges = {int(A.sum())}, Errors esborrant = {errors_removed}, Errors creant = {errors_added}\")\\n\\n# Guardar a disc\\nout_name = \"synthetic_repo_errors.npy\"\\nnp.save(out_name, A_repo)\\nprint(\"\\nGuardades les xarxes amb errors exactes a:\", out_name)\\n'"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "'''# === Generar xarxes amb errors exactes (estil del repo) ===\n",
-    "\n",
-    "K = 2             # nombre de xarxes a generar\n",
-    "e_error = 327       # errors esborrant enllaços\n",
-    "z_error = 327       # errors creant enllaços\n",
-    "\n",
-    "# Carregar blueprint si cal\n",
-    "if 'L' not in globals():\n",
-    "    print(\"No hi ha L a la memòria, carregant A2_blueprint.npy ...\")\n",
-    "    L = np.load(\"A2_blueprint.npy\")\n",
-    "\n",
-    "Nx = L.shape[0]\n",
-    "print(\"Blueprint A2 carregat: shape\", L.shape, \"edges:\", int(L.sum()))\n",
-    "\n",
-    "# Preparar output\n",
-    "A_repo = np.zeros((K, Nx, Nx), dtype=int)\n",
-    "rng = np.random.default_rng(42)  # llavor fixa\n",
-    "\n",
-    "edges_total = int(L.sum())\n",
-    "zeros_total = Nx * Nx - edges_total\n",
-    "\n",
-    "print(\"Edges A2:\", edges_total, \"Zeros A2:\", zeros_total)\n",
-    "\n",
-    "# Comprovacions\n",
-    "if e_error > edges_total:\n",
-    "    raise ValueError(f\"e_error ({e_error}) > nombre d'enllaços ({edges_total})\")\n",
-    "if z_error > zeros_total:\n",
-    "    raise ValueError(f\"z_error ({z_error}) > nombre de zeros ({zeros_total})\")\n",
-    "\n",
-    "for m in range(K):\n",
-    "    A = L.copy().astype(int)\n",
-    "    A_flat = A.reshape(Nx*Nx)\n",
-    "\n",
-    "    ones_idx = np.where(A_flat == 1)[0]\n",
-    "    zeros_idx = np.where(A_flat == 0)[0]\n",
-    "\n",
-    "    flip_ones = rng.choice(ones_idx, size=e_error, replace=False)\n",
-    "    flip_zeros = rng.choice(zeros_idx, size=z_error, replace=False)\n",
-    "\n",
-    "    A_flat[flip_ones] = 0\n",
-    "    A_flat[flip_zeros] = 1\n",
-    "\n",
-    "    A = A_flat.reshape(Nx, Nx)\n",
-    "    A_repo[m] = A\n",
-    "\n",
-    "    errors_removed = edges_total - np.sum((A == 1) & (L == 1))\n",
-    "    errors_added = np.sum((A == 1) & (L == 0))\n",
-    "\n",
-    "    print(f\"Xarxa {m}: Edges = {int(A.sum())}, Errors esborrant = {errors_removed}, Errors creant = {errors_added}\")\n",
-    "\n",
-    "# Guardar a disc\n",
-    "out_name = \"synthetic_repo_errors.npy\"\n",
-    "np.save(out_name, A_repo)\n",
-    "print(\"\\nGuardades les xarxes amb errors exactes a:\", out_name)\n",
-    "'''"
    ]
   },
   {
@@ -642,13 +300,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "id": "f9447b3c",
    "metadata": {},
    "outputs": [],
    "source": [
+    "#variables d'interes\n",
+    "L = np.load(\"A2_blueprint.npy\")\n",
+    "q_paper = 0.15\n",
+    "p_paper = 0.007\n",
+    "num_networks = 2\n",
     "#defineixo funcio CreateCopies\n",
-    "def CreateCopies(L,q,p,num_networks=2):\n",
+    "def CreateCopies(L,q,p,num_networks):\n",
     "    Nx = len(L) #nombre de nodes \n",
     "    A_test = np.zeros((num_networks, Nx, Nx)) #crea un array 3D ple de zeros\n",
     "\n",
@@ -681,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "id": "7d986762",
    "metadata": {},
    "outputs": [
@@ -750,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
    "id": "49a162bf",
    "metadata": {},
    "outputs": [
@@ -799,7 +462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 10,
    "id": "3b0c980c",
    "metadata": {},
    "outputs": [
@@ -869,7 +532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 11,
    "id": "a3e81b1f",
    "metadata": {},
    "outputs": [],
@@ -892,7 +555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 12,
    "id": "b6cfd7ee",
    "metadata": {},
    "outputs": [],
@@ -1103,7 +766,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 13,
    "id": "7adc8e1e",
    "metadata": {},
    "outputs": [
@@ -1194,8 +857,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "79502171",
+   "metadata": {},
+   "source": [
+    "Apliquem shuffles per generar xarxes random"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 14,
    "id": "d86d9809",
    "metadata": {},
    "outputs": [
@@ -1219,15 +890,15 @@
     }
    ],
    "source": [
-    "# NUEVA CELDA: shuffles (mínimos cambios respecto a la celda identidad)\n",
+    "\n",
     "n_shuffles = 10\n",
     "H_shuffle = []\n",
     "\n",
     "for t in range(n_shuffles):\n",
-    "    # construir matriz de permutacions correcta (num_networks x Nx)\n",
+    "    # Generar P_inv aleatori\n",
     "    P_inv_shuffle = np.array([np.random.permutation(Nx) for _ in range(num_networks)], dtype=np.int64)\n",
     "\n",
-    "    # misme pipeline que usaste con P_inv_id\n",
+    "    # mateix pipeline que per P_inv_id\n",
     "    L_sh = L_wiring(Ao_enters, P_inv_shuffle)\n",
     "    ovlp0_sh, ovlp1_sh = overlap_total_prob(L_sh, Ao_enters, P_inv_shuffle)\n",
     "\n",
@@ -1242,16 +913,15 @@
     "\n",
     "    H_shuffle.append(H_sh)\n",
     "    print(f\"Shuffle {t+1}/{n_shuffles}  —  H = {H_sh:.6f}\")\n",
-    "# resumen rápido\n",
+    "\n",
     "print(\"H_identity =\", H_identity)\n",
     "print(\"H_shuffle (lista) =\", H_shuffle)\n",
-    "# guardarlo\n",
     "np.save(\"H_shuffle.npy\", np.array(H_shuffle))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 15,
    "id": "b1dba5b4",
    "metadata": {},
    "outputs": [
