--- a/codienbrut.ipynb
+++ b/codienbrut.ipynb
@@ -238,6 +238,16 @@
     "print(\"\\nGuardades les xarxes amb errors exactes a:\", out_name)\n",
     "'''"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f0020729",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "P_inv_id = np.array([random.shuffle(np.arange(Nx)) for _ in range(num_networks)])"
+   ]
   }
  ],
  "metadata": {
