--- a/crear_blueprint.ipynb
+++ b/crear_blueprint.ipynb
@@ -801,8 +801,8 @@
     "\n",
     "# Construir Ao a enters i identitat (P_inv_id)\n",
     "Ao_enters = A_test.astype(int)       # aqui convertim a int per si de cas havia quedat amb floats després de fer rand\n",
-    "P_inv_id = np.tile(np.arange(Nx), (num_networks, 1))\n",
-    "\n",
+    "P_inv_id = np.tile(np.arange(Nx), (num_networks, 1)) \n",
+    "#tile empila num_networks vegades la matriu [0,1,2,...,Nx-1] perque cada xarxa tingui la seva pròpia matriu identitat\n",
     "\n",
     "#Cridar L_wiring \n",
     "print(\"Aplico L_wiring\")\n",
@@ -824,8 +824,8 @@
     "#aplico hamiltonian_prob\n",
     "# Calcular nombre d'enllaços i zeros a la blueprint\n",
     "Nx = L_nova.shape[0]\n",
-    "Edges_L = num_networks* int(L_nova.sum())                 # nombre de 1s de la blueprint, hauria de ser 2186\n",
-    "Edges_NoL = num_networks*Nx*Nx - Edges_L            # nombre de 0s\n",
+    "Edges_L = num_networks* int(L_nova.sum()) # nombre de 1s de la blueprint\n",
+    "Edges_NoL = num_networks*Nx*Nx - Edges_L    # nombre de 0s\n",
     "\n",
     "print(\"Edges_L  =\", Edges_L)\n",
     "print(\"Edges_NoL =\", Edges_NoL)\n",
@@ -897,21 +897,14 @@
     "for t in range(n_shuffles):\n",
     "    # Generar P_inv aleatori\n",
     "    P_inv_shuffle = np.array([np.random.permutation(Nx) for _ in range(num_networks)], dtype=np.int64)\n",
-    "\n",
+    "    #fem servir random permutations enlloc de shuffle perque shuffle modifica l'array original\n",
     "    # mateix pipeline que per P_inv_id\n",
     "    L_sh = L_wiring(Ao_enters, P_inv_shuffle)\n",
     "    ovlp0_sh, ovlp1_sh = overlap_total_prob(L_sh, Ao_enters, P_inv_shuffle)\n",
     "\n",
-    "    H_sh = hamiltonian_prob(\n",
-    "        Edges_NoL,\n",
-    "        Edges_L,\n",
-    "        ovlp0_sh,\n",
-    "        ovlp1_sh,\n",
-    "        alpha,\n",
-    "        beta\n",
-    "    )\n",
+    "    H_sh = hamiltonian_prob(Edges_NoL,  Edges_L, ovlp0_sh, ovlp1_sh, alpha, beta)\n",
     "\n",
-    "    H_shuffle.append(H_sh)\n",
+    "    H_shuffle.append(H_sh) #guardar valors\n",
     "    print(f\"Shuffle {t+1}/{n_shuffles}  —  H = {H_sh:.6f}\")\n",
     "\n",
     "print(\"H_identity =\", H_identity)\n",
