Definim una nova L_wiring amb probabilitat d'enllaç aleatòria, sense autoconnectivitats ni simetria

--- a/estimacio_p_q_i_sampling.ipynb
+++ b/estimacio_p_q_i_sampling.ipynb
@@ -52,11 +52,114 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "eb5266a1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import itertools\n",
+    "import pickle\n",
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "import math\n",
+    "import random\n",
+    "import os\n",
+    "import time\n",
+    "from numba import jit, njit\n",
+    "from numba.types import bool_, int_, float32\n",
+    "from math import comb\n",
+    "from copy import deepcopy\n",
+    "from tqdm import tqdm\n",
+    "import networkx as nx\n",
+    "import pandas as pd\n",
+    "from collections import defaultdict\n",
+    "from itertools import permutations"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "98bb28c9",
    "metadata": {},
    "source": [
     "## Generació del wiring aleatori"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ca4f5d4d",
+   "metadata": {},
+   "source": [
+    "En lloc d’inferir el wiring a partir de les observacions, es considera un wiring aleatori amb probabilitat uniforme per a cada enllaç possible, amb l’objectiu d’evitar biaixos estructurals introduïts per la mostra finita de dades. No mirem dades (ni A_f ni P_inv_f) pq volem un null model."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7f3a1c6f",
+   "metadata": {},
+   "source": [
+    "\n",
+    "En l’enfocament anterior, la matriu de wiring  es construïa a partir de les K xarxes observades alineades, assignant un enllaç en cada posició del blueprint si aquest apareixia en la majoria de les observacions.\n",
+    "\n",
+    "En aquest notebook s’adopta una estratègia diferent. Amb l’objectiu de definir un model nul més neutre i evitar biaixos estructurals associats a una mostra finita d’observacions, el wiring es genera de manera aleatòria i independent de les xarxes observades. Concretament, cada entrada del wiring es construeix com una variable aleatòria de Bernoulli amb probabilitat uniforme.\n",
+    "\n",
+    "Aquest procediment assigna la mateixa probabilitat a tots els enllaços possibles i garanteix que el wiring no codifica cap estructura preferencial derivada de les dades. Un cop generada, la matriu es manté fixa durant tota la resta de l’anàlisi, i s’utilitza tant per a l’estimació dels paràmetres del model com per a la generació de l’ensemble de xarxes.\n",
+    "\n",
+    "Aquesta separació clara entre la definició estructural del model (wiring) i la informació empírica (xarxa observada) permet interpretar de manera més rigorosa la distribució d’energies obtinguda i avaluar fins a quin punt la configuració observada és compatible amb les fluctuacions esperades sota el model probabilístic considerat.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e135fd4c",
+   "metadata": {},
+   "source": [
+    "#### Dubtes\n",
+    "\n",
+    "La matrius és simetrica? és a dir, un link a-->b implica b-->a? (L_ij=L_ji?)\n",
+    "La diagonal és 0? Existeixen self-links Lii?\n",
+    "\n",
+    "Atès que la xarxa neuronal de C. elegans es representa mitjançant una matriu d’adjacència dirigida, no s’imposa simetria en la construcció del wiring. En canvi, es força la diagonal a zero, ja que no es consideren autoconnectivitats.\n",
+    "Atès que les dades de connectoma no inclouen autoconnectivitats i que aquestes no estan contemplades en la Hamiltoniana del model, es força la diagonal del wiring a zero"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "fd5d22ef",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "L_wiring generada aleatòriament té la forma:(20, 20)\n",
+      "Diagonal de L_wiring_nova:\n",
+      "[0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def L_wiring_random(Nx, Ny): \n",
+    "    L_wiring= np.zeros((Nx,Ny))\n",
+    "\n",
+    "    for i in range(0,Nx):\n",
+    "        for j in range(0, Ny):\n",
+    "            if np.random.rand() < 0.5:\n",
+    "                L_wiring[i,j]=1\n",
+    "            else:\n",
+    "                L_wiring[i,j]=0\n",
+    "    #vull imposar que la diagonal sigui 0\n",
+    "    for i in range(0, min(Nx,Ny)):\n",
+    "        L_wiring[i,i]=0\n",
+    "    return L_wiring\n",
+    "Nx=20\n",
+    "Ny=20\n",
+    "L_wiring_nova = L_wiring_random(Nx, Ny)\n",
+    "print(f\"L_wiring generada aleatòriament té la forma:{L_wiring_nova.shape}\")\n",
+    "#vull imprimir la diagonal per comprovar que és 0\n",
+    "print(\"Diagonal de L_wiring_nova:\") \n",
+    "print(np.diag(L_wiring_nova))"
    ]
   },
   {
@@ -101,8 +204,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "myenv",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.13"
   }
  },
  "nbformat": 4,
