--- a/estimacio_p_q_i_sampling.ipynb
+++ b/estimacio_p_q_i_sampling.ipynb
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "id": "eb5266a1",
    "metadata": {},
    "outputs": [],
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "id": "fd5d22ef",
    "metadata": {},
    "outputs": [
@@ -135,7 +135,13 @@
      "text": [
       "L_wiring generada aleatòriament té la forma:(20, 20)\n",
       "Diagonal de L_wiring_nova:\n",
-      "[0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]\n"
+      "[0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]\n",
+      "Primeres 5 posicions son: \n",
+      "[[0. 0. 1. 0. 0.]\n",
+      " [0. 0. 1. 1. 0.]\n",
+      " [0. 0. 0. 1. 0.]\n",
+      " [1. 0. 0. 0. 0.]\n",
+      " [0. 1. 1. 0. 0.]]\n"
      ]
     }
    ],
@@ -159,7 +165,9 @@
     "print(f\"L_wiring generada aleatòriament té la forma:{L_wiring_nova.shape}\")\n",
     "#vull imprimir la diagonal per comprovar que és 0\n",
     "print(\"Diagonal de L_wiring_nova:\") \n",
-    "print(np.diag(L_wiring_nova))"
+    "print(np.diag(L_wiring_nova))\n",
+    "print(\"Primeres 5 posicions son: \")\n",
+    "print(L_wiring_nova[:5,:5])"
    ]
   },
   {
