Definició mida L_wiring_nova, inferim p_inf i q_inf i generem xarxes aleatòries amb aquests errors

--- a/estimacio_p_q_i_sampling.ipynb
+++ b/estimacio_p_q_i_sampling.ipynb
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "id": "eb5266a1",
    "metadata": {},
    "outputs": [],
@@ -75,6 +75,34 @@
     "import pandas as pd\n",
     "from collections import defaultdict\n",
     "from itertools import permutations"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2f641c6d",
+   "metadata": {},
+   "source": [
+    "### Carreguem dades"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "55a6651e",
+   "metadata": {},
+   "source": [
+    "La xarxa observada es carrega directament a partir d’un fitxer binari generat en un notebook previ, on s’ha realitzat el preprocesament complet del dataset original. En aquest notebook s’utilitza exclusivament per determinar les dimensions del sistema i com a observació empírica del model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "4fb424b0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "xarxa_obs = np.load(\"A2_blueprint.npy\")\n",
+    "Nx=xarxa_obs.shape[0]\n",
+    "Ny=xarxa_obs.shape[1]"
    ]
   },
   {
@@ -125,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "id": "fd5d22ef",
    "metadata": {},
    "outputs": [
@@ -133,15 +161,24 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "L_wiring generada aleatòriament té la forma:(20, 20)\n",
+      "L_wiring generada aleatòriament té la forma:(224, 224)\n",
       "Diagonal de L_wiring_nova:\n",
-      "[0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]\n",
+      "[0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.\n",
+      " 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.\n",
+      " 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.\n",
+      " 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.\n",
+      " 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.\n",
+      " 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.\n",
+      " 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.\n",
+      " 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.\n",
+      " 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.\n",
+      " 0. 0. 0. 0. 0. 0. 0. 0.]\n",
       "Primeres 5 posicions son: \n",
-      "[[0. 0. 1. 0. 0.]\n",
-      " [0. 0. 1. 1. 0.]\n",
-      " [0. 0. 0. 1. 0.]\n",
-      " [1. 0. 0. 0. 0.]\n",
-      " [0. 1. 1. 0. 0.]]\n"
+      "[[0. 1. 1. 0. 0.]\n",
+      " [0. 0. 1. 1. 1.]\n",
+      " [0. 1. 0. 1. 1.]\n",
+      " [0. 1. 0. 0. 0.]\n",
+      " [1. 0. 1. 0. 0.]]\n"
      ]
     }
    ],
@@ -159,8 +196,7 @@
     "    for i in range(0, min(Nx,Ny)):\n",
     "        L_wiring[i,i]=0\n",
     "    return L_wiring\n",
-    "Nx=20\n",
-    "Ny=20\n",
+    "\n",
     "L_wiring_nova = L_wiring_random(Nx, Ny)\n",
     "print(f\"L_wiring generada aleatòriament té la forma:{L_wiring_nova.shape}\")\n",
     "#vull imprimir la diagonal per comprovar que és 0\n",
@@ -180,10 +216,163 @@
   },
   {
    "cell_type": "markdown",
+   "id": "1ad879d7",
+   "metadata": {},
+   "source": [
+    "Assumint un model de còpia amb soroll, s’estimen les probabilitats d’error p_inf i q_inf comparant directament la xarxa observada amb el wiring latent. En particular, q_inf correspon a la fracció d’enllaços del wiring que no apareixen a l’observació (1→0), mentre que p_inf correspon a la fracció de connexions espúries observades en posicions on el wiring no conté enllaç (0→1)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a844004f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "q_inf (probabilitat d'eliminar un enllaç existent):  0.9573476846459698\n",
+      "p_inf (probabilitat d'afegir un enllaç inexistent):  0.04446730229061993\n"
+     ]
+    }
+   ],
+   "source": [
+    "#inicialitzo els comptadors\n",
+    "zeros_wiring = 0 #nombre de zeros en la matriu de L_wiring_nova\n",
+    "uns_wiring = 0 #nombre d'uns en la matriu de L_wiring_nova\n",
+    "\n",
+    "nre_q = 0 #casos L_wiring_nova[i][j] = 1 i xarxa_obs[i][j] = 0\n",
+    "nre_p = 0 #casos L_wiring_nova[i][j] = 0 i xarxa_obs[i][j] = 1\n",
+    "\n",
+    "for i in range(0,Nx):\n",
+    "    for j in range(0,Ny):\n",
+    "        if L_wiring_nova[i][j]==0:\n",
+    "            zeros_wiring += 1\n",
+    "            if xarxa_obs[i][j]==1:\n",
+    "                nre_p+=1\n",
+    "        else: #L_wiring_nova[i][j]==1\n",
+    "            uns_wiring += 1\n",
+    "            if xarxa_obs[i][j]==0:\n",
+    "                nre_q+=1\n",
+    "#calculo p_inf i q_inf (inferits)\n",
+    "q_inf = nre_q/uns_wiring #probabilitat d'un fals negatiu\n",
+    "p_inf = nre_p/zeros_wiring #probabilitat d'un fals positiu\n",
+    "\n",
+    "print(\"q_inf (probabilitat d'eliminar un enllaç existent): \", q_inf)\n",
+    "print(\"p_inf (probabilitat d'afegir un enllaç inexistent): \", p_inf)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bb30429d",
+   "metadata": {},
+   "source": [
+    "#####  Interpretació dels resultats\n",
+    "El valor elevat de q_inf indica que molts dels enllaços del wiring aleatori no coincideixen amb la xarxa observada, fet que és esperable quan s’imposa una estructura generada aleatòriament. En canvi, p_inf pren un valor més petit, reflectint que només una fracció reduïda de connexions espúries apareixen en la comparació. Aquests valors són coherents amb el caràcter aleatori del wiring utilitzat."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "6b18ef47",
    "metadata": {},
    "source": [
     "##  Generació de l’ensemble de xarxes"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "61afe4d8",
+   "metadata": {},
+   "source": [
+    "Volem fer una funció que prengui d'entrada una matriu binaria L_wiring_nova, i dues probabilitats p_inf i q_inf; i que retorni una matriu binaria A_sintetica"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "f3c7ac8b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def generar_xarxa_sintetica(L_wiring_nova, p_inf, q_inf):\n",
+    "    Nx = L_wiring_nova.shape[0]\n",
+    "    Ny = L_wiring_nova.shape[1]\n",
+    "    L_sint = np.zeros((Nx,Ny))\n",
+    "    \n",
+    "    for i in range(0,Nx):\n",
+    "        for j in range(0,Ny):\n",
+    "            if L_wiring_nova[i][j]==1: \n",
+    "            #enllaç existent que pot ser eliminat amb probabilitat q_inf\n",
+    "                if np.random.rand() >= q_inf:\n",
+    "                    L_sint[i][j]=1\n",
+    "            else:\n",
+    "                #enllaç inexistent que pot ser afegit amb probabilitat p_inf\n",
+    "                if np.random.rand() < p_inf:\n",
+    "                    L_sint[i][j]=1\n",
+    "    return L_sint "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "7672f23b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "L_sint generada té la forma:(224, 224)\n",
+      "Nombre d'enllaços en L_sint:  2158.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "L_sint=generar_xarxa_sintetica(L_wiring_nova, p_inf, q_inf)\n",
+    "print(f\"L_sint generada té la forma:{L_sint.shape}\")\n",
+    "print(\"Nombre d'enllaços en L_sint: \", np.sum(L_sint))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "aa523d5d",
+   "metadata": {},
+   "source": [
+    "Ara vull aplicar la funció per generar múltiples xarxes sintètiques"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "ef24298a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "L_sint generada te la forma (5, 224, 224)\n",
+      "Nombre d'enllaços a la xarxa 0: 2148.0\n",
+      "Nombre d'enllaços a la xarxa 1: 2058.0\n",
+      "Nombre d'enllaços a la xarxa 2: 2088.0\n",
+      "Nombre d'enllaços a la xarxa 3: 2160.0\n",
+      "Nombre d'enllaços a la xarxa 4: 2152.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "nre_xarxes = 5 #potser després canviar nre al mateix que en l'altre cas\n",
+    "Nx = L_wiring_nova.shape[0]\n",
+    "Ny = L_wiring_nova.shape[1]\n",
+    "L_sint=np.zeros((nre_xarxes,Nx,Ny))\n",
+    "\n",
+    "for k in range(0,nre_xarxes):\n",
+    "    L_sint[k,:,:]=generar_xarxa_sintetica(L_wiring_nova, p_inf, q_inf)\n",
+    "    \n",
+    "print(f\"L_sint generada te la forma\", L_sint.shape)\n",
+    "for i in range(nre_xarxes):\n",
+    "    print(f\"Nombre d'enllaços a la xarxa {i}: {np.sum(L_sint[i,:,:])}\")\n"
    ]
   },
   {
